# BookTracker

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
backend/: CMakeLists.txt
backend/include/: api.h  database.h
backend/resources/: database.sqlite  database.sqlite.sqbpro
backend/src/: api.cpp  database.cpp  main.cpp
frontend/: analytics.html  app.js  index.html
